--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 .main{
-    background: linear-gradient(135deg, #43cea2, #185a9d);
+    /* background: linear-gradient(135deg, #43cea2, #185a9d); */
+    /* background-image: url('/images/c');  */
     width: 100%;
     height: 100vh;
 }
