--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,7 +1,7 @@
 .home {
     width: 100%;
     height: 100%;
-        background: linear-gradient(135deg, #43cea2, #185a9d);
+    background: linear-gradient(135deg, #43cea2, #185a9d);
 
   }
   
@@ -13,6 +13,7 @@
   
   .Cards{
     display: flex;
+    flex-direction: wrap;
     background-color: red;
     width: 100%;
     height: 40vh;
