--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,7 +1,10 @@
+.home_container{
+  /* background-color: #fff; */
+
+}
 .home {
     width: 100%;
     height: 100%;
-    background: linear-gradient(135deg, #43cea2, #185a9d);
 
   }
   
